<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/layoutlogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FF9800"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logoapp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="150dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/app_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/welcome"
            android:textAppearance="?android:attr/textAppearance"
            android:textSize="30dp"
            android:textStyle="bold">

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutmain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/layoutlogo"
        android:background="#FF9800"
        android:gravity="center"
        android:orientation="vertical">


        <Button
            android:id="@+id/btregistrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#202B2A"
            android:text="@string/btregistrar"
            android:textSize="15dp" />

        <Button
            android:id="@+id/btentrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="50dp"
            android:backgroundTint="#202B2A"
            android:text="@string/btentrar"
            android:textSize="15dp" />

    </LinearLayout>

</RelativeLayout>
